--- a/index.html
+++ b/index.html
@@ -152,15 +152,83 @@
               </div>
             </div>
           </div>
-          <div class="lg:absolute lg:right-5 lg:bottom-7 p-5 bg-slate-950 text-white space-y-4 lg:rounded-md md:w-1/3">
+          <div
+            class="lg:absolute lg:right-5 lg:bottom-7 p-5 bg-slate-950 text-white space-y-4 lg:rounded-md md:w-1/3"
+          >
             <h3 class="text-xl">Meet all the heroes from the field</h3>
-            <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            <p>
+              Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+              turpis placerat dolor. Purus urna in sit nullam proin.
+            </p>
           </div>
         </div>
       </section>
     </header>
     <!-- main section -->
-    <main></main>
+    <main class="container mx-auto">
+      <section>
+        <!-- title of club section -->
+        <div class="text-center my-10 space-y-4">
+          <h2 class="text-2xl font-bold">Professional Hockeys Club</h2>
+          <p class="">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat <br />
+            dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- club section -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+          <!-- player facility -->
+          <div class="text-center bg-slate-50 py-6 rounded-md space-y-3">
+            <div
+              class="radial-progress text-red-500 text-primary"
+              style="--value: 87"
+              role="progressbar"
+            >
+              <p class="text-black">87%</p>
+            </div>
+            <h3>Prayer Facility</h3>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <!-- player facility -->
+          <div class="text-center bg-slate-50 py-6 rounded-md space-y-3">
+            <div
+              class="radial-progress text-yellow-500 text-primary"
+              style="--value: 80"
+              role="progressbar"
+            >
+              <p class="text-black">80%</p>
+            </div>
+            <h3>Experienced Coach</h3>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <!-- player facility -->
+          <div class="text-center bg-slate-50 py-6 rounded-md space-y-3">
+            <div
+              class="radial-progress text-primary"
+              style="--value: 90"
+              role="progressbar"
+            >
+              <p class="text-black">90%</p>
+            </div>
+            <h3>Senior Player</h3>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <!-- player facility -->
+          <div class="text-center bg-slate-50 py-6 rounded-md space-y-3">
+            <div
+              class="radial-progress text-[#49D293] text-primary"
+              style="--value: 95"
+              role="progressbar"
+            >
+              <p class="text-black">95%</p>
+            </div>
+            <h3>Training Ground</h3>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- footer section -->
     <footer></footer>
   </body>
