--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
     </header>
     <!-- main section -->
     <main class="container mx-auto">
+      <!-- club details section -->
       <section>
         <!-- title of club section -->
         <div class="text-center my-10 space-y-4">
@@ -225,6 +226,66 @@
             </div>
             <h3>Training Ground</h3>
             <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
+      </section>
+      <!-- program section -->
+      <section>
+        <!-- title of program section -->
+        <div class="text-center my-10 space-y-4">
+          <h2 class="text-2xl font-bold">Program Sections</h2>
+          <p class="">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat <br />
+            dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- program cards -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 py-14">
+          <!-- card one -->
+          <div class="card image-full w-full shadow-xl">
+            <figure>
+              <img class="w-full" src="Images/2.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title font-bold text-3xl">Junior Program</h2>
+              <p>
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button class="btn w-1/3 btn-error text-white">Register Now!</button>
+            </div>
+          </div>
+          <!-- card one -->
+          <div class="card image-full w-full px-0 shadow-xl">
+            <figure>
+              <img class="w-full" src="Images/3.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title font-bold text-3xl">Junior Program</h2>
+              <p>
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button class="btn w-1/3 btn-error text-white">Register Now!</button>
+            </div>
+          </div>
+          <!-- card one -->
+          <div class="card image-full w-full col-span-2 px-0 shadow-xl">
+            <figure>
+              <img class="w-full" src="Images/4.png" alt="" />
+            </figure>
+            <div class="card-body ">
+              <h2 class="card-title font-bold text-3xl">Junior Program</h2>
+              <p>
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit <br>
+                elit enim sagittis turpis in magna. Id et sed euismod natoque  <br>
+                amet nunc morbi nulla. Tortor congue sed et in.
+              </p>
+              <button class="btn w-1/5 btn-error text-white">Register Now!</button>
+            </div>
           </div>
         </div>
       </section>
