--- a/index.html
+++ b/index.html
@@ -254,7 +254,9 @@
                 elit enim sagittis turpis in magna. Id et sed euismod natoque
                 amet nunc morbi nulla. Tortor congue sed et in.
               </p>
-              <button class="btn w-1/3 btn-error text-white">Register Now!</button>
+              <button class="btn w-1/3 btn-error text-white">
+                Register Now!
+              </button>
             </div>
           </div>
           <!-- card one -->
@@ -269,7 +271,9 @@
                 elit enim sagittis turpis in magna. Id et sed euismod natoque
                 amet nunc morbi nulla. Tortor congue sed et in.
               </p>
-              <button class="btn w-1/3 btn-error text-white">Register Now!</button>
+              <button class="btn w-1/3 btn-error text-white">
+                Register Now!
+              </button>
             </div>
           </div>
           <!-- card one -->
@@ -277,14 +281,18 @@
             <figure>
               <img class="w-full" src="Images/4.png" alt="" />
             </figure>
-            <div class="card-body ">
+            <div class="card-body">
               <h2 class="card-title font-bold text-3xl">Junior Program</h2>
               <p>
-                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit <br>
-                elit enim sagittis turpis in magna. Id et sed euismod natoque  <br>
+                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                <br />
+                elit enim sagittis turpis in magna. Id et sed euismod natoque
+                <br />
                 amet nunc morbi nulla. Tortor congue sed et in.
               </p>
-              <button class="btn w-1/5 btn-error text-white">Register Now!</button>
+              <button class="btn w-1/5 btn-error text-white">
+                Register Now!
+              </button>
             </div>
           </div>
         </div>
