correction some css

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             </div>
           </div>
           <!-- card one -->
-          <div class="card image-full w-full col-span-2 px-0 shadow-xl">
+          <div class="card image-full w-full md:col-span-2 px-0 shadow-xl">
             <figure>
               <img class="w-full" src="Images/4.png" alt="" />
             </figure>
